资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/32bit/MT_API.bas


Declare Function MT_Set_Axis_Line_Halt Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Line_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Line_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Line_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Get_Axis_Line_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_Status Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_Axis Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pID0 As Long,ByRef pID1 As Long) As Long

Declare Function MT_Get_Axis_Line_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Line_V Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_AD_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_AD_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Board_T Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Circle_Axis Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_ID0 As Long,ByVal Axis_ID1 As Long) As Long

Declare Function MT_Set_Axis_Circle_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_V Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CW_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CW_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CCW_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_R_CCW_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Axis_Circle_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Circle_Halt Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Get_Axis_Circle_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_Status Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_Axis Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pID0 As Long,ByRef pID1 As Long) As Long

Declare Function MT_Get_Axis_Circle_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Circle_V Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Var_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Var_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_PLC_Var_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_PLC_Pause Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_PLC_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_PLC_Run Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_PLC_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Byte) As Long

Declare Function MT_Get_PLC_Code_Size Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Task_Count Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Task_Status Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Var_Seg Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Var_Used Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Status Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Tasks_Status Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_PLC_Axis_Ratio Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Single) As Long

Declare Function MT_Get_PLC_Encoder_Ratio Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Single) As Long

Declare Function MT_Set_Axis_Home_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Home_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Home_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Home_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Home_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Velocity_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Velocity_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Velocity_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Position_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Position_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Position_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Line_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Circle_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_X_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxis_Num As Long,ByVal pAxis As Long,ByVal pTarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxis_Num As Long,ByVal pAxis As Long,ByVal pTarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Target_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxisID As Long,ByVal ATarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Target_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxisID As Long,ByVal ATarget As Long) As Long

Declare Function MT_Set_Axis_Line_X_Count Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal ANum As Long) As Long

Declare Function MT_Set_Axis_Line_X_Axis Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxisID As Long,ByVal AAxis As Long) As Long

Declare Function MT_Set_Stream_Run Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_Stream_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_Stream_Pause Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_Stream_Clear Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Get_Stream_Space Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Stream_Total Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Stream_Count Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Set_Stream_Delay Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_V_Max Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Line_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Line_Halt Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Line_X_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxis_Num As Long,ByVal pAxis As Long,ByVal pTarget As Long) As Long

Declare Function MT_Set_Stream_Line_X_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AAxis_Num As Long,ByVal pAxis As Long,ByVal pTarget As Long) As Long

Declare Function MT_Set_Stream_Circle_Axis Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_ID0 As Long,ByVal Axis_ID1 As Long) As Long

Declare Function MT_Set_Stream_Circle_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_V_Max Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long
